# MisterAVIF

./: MANIFEST.in  README.md  misteravif.py  pyproject.toml  requirements.txt
examples/: .gitignore  Nuremberg-q05.avif  Nuremberg-q30.avif
