[tool.poetry]
name = "misteravif"
version = "1.0.0"
description = "A tool to recompress images to AVIF to determine desired compression quality"
authors = ["MisterAVIF Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ulikoehler/MisterAVIF"
repository = "https://github.com/ulikoehler/MisterAVIF"
documentation = "https://github.com/ulikoehler/MisterAVIF"
keywords = ["avif", "image", "compression", "quality", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "misteravif.py"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
matplotlib = "^3.5.0"
pillow-avif-plugin = "^1.4.0"
tqdm = "^4.60.0"
Pillow = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
mypy = "^0.910"

[tool.poetry.scripts]
misteravif = "misteravif:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
